封装了一些pc2函数

--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="lib/" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="src/pc2.jar"/>
+	<classpathentry kind="lib" path="src/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="src/lib/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="src/lib/mailapi.jar"/>
+	<classpathentry kind="lib" path="src/lib/mclb.jar"/>
+	<classpathentry kind="lib" path="src/lib/pc2.jar"/>
+	<classpathentry kind="lib" path="src/lib/smtp.jar"/>
+	<classpathentry kind="lib" path="src/lib/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="src/lib/slf4j-simple-1.7.25.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
