--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,27 @@
 	<classpathentry kind="lib" path="src/lib/jackson-annotations-2.5.4.jar"/>
 	<classpathentry kind="lib" path="src/lib/jackson-core-2.5.4.jar"/>
 	<classpathentry kind="lib" path="src/lib/jackson-databind-2.5.4.jar"/>
+	<classpathentry kind="lib" path="src/lib/activation.jar"/>
+	<classpathentry kind="lib" path="src/lib/hibernate-validator-5.1.3.Final.jar"/>
+	<classpathentry kind="lib" path="src/lib/hk2-api-2.4.0-b25.jar"/>
+	<classpathentry kind="lib" path="src/lib/hk2-locator-2.4.0-b25.jar"/>
+	<classpathentry kind="lib" path="src/lib/hk2-utils-2.4.0-b25.jar"/>
+	<classpathentry kind="lib" path="src/lib/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="src/lib/javax.inject-2.4.0-b25.jar"/>
+	<classpathentry kind="lib" path="src/lib/javax.servlet-api-3.1.0.jar"/>
+	<classpathentry kind="lib" path="src/lib/javax.ws.rs-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="src/lib/jersey-client-2.19.jar"/>
+	<classpathentry kind="lib" path="src/lib/jersey-common-2.19.jar"/>
+	<classpathentry kind="lib" path="src/lib/jersey-container-servlet-core-2.19.jar"/>
+	<classpathentry kind="lib" path="src/lib/jersey-guava-2.19.jar"/>
+	<classpathentry kind="lib" path="src/lib/jersey-server-2.19.jar"/>
+	<classpathentry kind="lib" path="src/lib/jetty-http-9.2.11.v20150529.jar"/>
+	<classpathentry kind="lib" path="src/lib/jetty-io-9.2.11.v20150529.jar"/>
+	<classpathentry kind="lib" path="src/lib/jetty-security-9.2.11.v20150529.jar"/>
+	<classpathentry kind="lib" path="src/lib/jetty-server-9.2.11.v20150529.jar"/>
+	<classpathentry kind="lib" path="src/lib/jetty-servlet-9.2.11.v20150529.jar"/>
+	<classpathentry kind="lib" path="src/lib/jetty-util-9.2.11.v20150529.jar"/>
+	<classpathentry kind="lib" path="src/lib/snakeyaml-1.16.jar"/>
+	<classpathentry kind="lib" path="src/lib/validation-api-1.1.0.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
